# FleetCredits

./: .gitattributes  .gitignore  Makefile.am  PRE_GITHUB_CLEANUP.md  README.md  autogen.sh  cleanup-for-github.sh  configure.ac  fleetcoin.conf-example-latest  genbuild.sh  libfleetcreditsconsensus.pc  libfleetcreditsconsensus.pc.in  optionsdialog.h  peerdialog.cpp  peerdialog.h
contrib/: README.md  (+5 more)
src/: Makefile  Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  attributes.h  auxpow.cpp  auxpow.h  base58.cpp  base58.h  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  (+106 more)
src/bench/: Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_fleetcredits.cpp  ccoins_caching.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  lockedpool.cpp  mempool_eviction.cpp  perf.cpp  perf.h  rollingbloom.cpp  verify_script.cpp
src/compat/: arm_acle_selector.h  byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/config/: fleetcredits-config.h  fleetcredits-config.h.in
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: aes.cpp  aes.h  chacha20.cpp  chacha20.h  common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  scrypt-sse2.cpp  scrypt.cpp  scrypt.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/docserver/: README.md  gen.py  gen_all.py  gen_complete.py  package.json
src/docserver/pages/: address-system.html  api-reference.html  blockchain-core.html  building.html  community-reserve.html  contribution-rewards.html  mweb-implementation-status.html  mweb-operations.html  mweb-structures.html  network-params.html  qt-themes.html  rpc-blockchain.html  rpc-contribution.html  rpc-overview.html  server-installation.html  test-structures.html  utxo-model.html  validation.html  wallet-classes.html  wallet-overview.html
src/policy/: fees.cpp  fees.h  fleetcredits-fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.cpp  block.h  contribution.cpp  contribution.h  governance.cpp  governance.h  mweb.cpp  mweb.h  pureheader.cpp  pureheader.h  transaction.cpp  transaction.h  verification.cpp  verification.h
src/qt/: REDESIGN_IMPLEMENTATION.md  REDESIGN_PLAN.md  REDESIGN_SUMMARY.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  contributionspage.cpp  contributionspage.h  csvmodelwriter.cpp  csvmodelwriter.h  customthemes.cpp  customthemes.h  editaddressdialog.cpp  editaddressdialog.h  enhancedthemeswitcher.h  ensure_moc.sh  fleetcredits.cpp  fleetcredits.moc  fleetcredits.qrc  fleetcredits_locale.qrc  fleetcreditsaddressvalidator.cpp  fleetcreditsaddressvalidator.h  fleetcreditsamountfield.cpp  fleetcreditsamountfield.h  fleetcreditsgui.cpp  fleetcreditsgui.h  fleetcreditsstrings.cpp  fleetcreditsunits.cpp  fleetcreditsunits.h  (+125 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  contributionspage.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  modaloverlay.ui  mwebsuitepage.ui  optionsdialog.ui  overviewpage.ui  paperwalletdialog.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/res/: fleetcredits-qt-res.rc
src/qt/styles/: modernstylesheet.qss
src/qt/test/: rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h
src/qt/themes/: CUSTOM_THEMES_README.md  moc_theme_manager.cpp  theme_manager.cpp  theme_manager.h
src/rpc/: auxcache.cpp  auxcache.h  auxpow.cpp  blockchain.cpp  blockchain.h  client.cpp  client.h  contribution.cpp  contribution.h  governance.cpp  mining.cpp  mining.h  misc.cpp  mweb.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: fleetcreditsconsensus.cpp  fleetcreditsconsensus.h  interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  configure.ac  libsecp256k1.pc.in
src/support/: cleanse.cpp  cleanse.h  events.h  experimental.h  lockedpool.cpp  lockedpool.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: DoS_tests.cpp  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  auxcache_tests.cpp  auxpow_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bloom_tests.new  bswap_tests.cpp  buildenv.py  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  dogecoin_tests.cpp  fleetcredits-util-test.py  fleetcredits_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  mweb_test.cpp  mweb_test.h  mweb_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  (+34 more)
src/test/data/: fleetcredits-util-test.json
src/univalue/: Makefile.am  README.md
src/univalue/include/: univalue.h
src/wallet/: coincontrol.h  crypter.cpp  crypter.h  db.cpp  db.h  rpcdump.cpp  rpcutil.cpp  rpcutil.h  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h  walletextensions.h
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+190 files in other folders)
